RESOLVED FIXED177622
test262: Unexpected passes after r222617 and r222618
https://bugs.webkit.org/show_bug.cgi?id=177622
Summary test262: Unexpected passes after r222617 and r222618
Ryan Haddad
Reported 2017-09-28 14:39:59 PDT
After https://trac.webkit.org/changeset/222617, these 14 tests started unexpectedly passing on test262 Release and Debug bots: test262.yaml/test262/test/built-ins/Array/prototype/copyWithin/return-abrupt-from-delete-proxy-target.js.default: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Array/prototype/copyWithin/return-abrupt-from-delete-proxy-target.js.default-strict: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setDate/arg-to-number-err.js.default: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setDate/arg-to-number-err.js.default-strict: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setFullYear/arg-date-to-number-err.js.default: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setFullYear/arg-date-to-number-err.js.default-strict: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setFullYear/arg-month-to-number-err.js.default-strict: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setFullYear/arg-month-to-number-err.js.default: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setFullYear/arg-year-to-number-err.js.default-strict: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setFullYear/arg-year-to-number-err.js.default: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setMonth/arg-date-to-number-err.js.default: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setMonth/arg-date-to-number-err.js.default-strict: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setMonth/arg-month-to-number-err.js.default: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setMonth/arg-month-to-number-err.js.default-strict: ERROR: Unexpected exit code: 0 https://build.webkit.org/builders/Apple%20El%20Capitan%20Release%20Test262%20%28Tests%29/builds/4434 https://build.webkit.org/builders/Apple%20El%20Capitan%20Debug%20Test262%20%28Tests%29/builds/3364 After https://trac.webkit.org/changeset/222618, we went down to 8 tests unexpectedly passing on the test262 Debug bot: test262.yaml/test262/test/built-ins/Array/prototype/copyWithin/return-abrupt-from-delete-proxy-target.js.default: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Array/prototype/copyWithin/return-abrupt-from-delete-proxy-target.js.default-strict: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setDate/arg-to-number-err.js.default-strict: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setDate/arg-to-number-err.js.default: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setFullYear/arg-date-to-number-err.js.default: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setFullYear/arg-date-to-number-err.js.default-strict: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setMonth/arg-date-to-number-err.js.default: ERROR: Unexpected exit code: 0 test262.yaml/test262/test/built-ins/Date/prototype/setMonth/arg-date-to-number-err.js.default-strict: ERROR: Unexpected exit code: 0 https://build.webkit.org/builders/Apple%20El%20Capitan%20Debug%20Test262%20%28Tests%29/builds/3365
Attachments
proposed patch. (10.78 KB, patch)
2017-09-28 16:04 PDT, Mark Lam
saam: review+
Radar WebKit Bug Importer
Comment 1 2017-09-28 15:32:29 PDT
Mark Lam
Comment 2 2017-09-28 16:04:24 PDT
Created attachment 322133 [details] proposed patch.
Mark Lam
Comment 3 2017-09-28 16:33:45 PDT
Thanks for the review. Landed in r222638: <http://trac.webkit.org/r222638>.
Note You need to log in before you can comment on or make changes to this bug.