test262: Unexpected passes after r222617 and r222618. https://bugs.webkit.org/show_bug.cgi?id=177622 <rdar://problem/34725960>

Reviewed by Saam Barati.

JSTests:

Update test262.yaml for tests that are now passing.

* test262.yaml:

Source/JavaScriptCore:

Now that these tests are marked as "normal", we will run them and discover a few
missing exception checks.  This patch also adds those missing exception checks.

* runtime/DatePrototype.cpp:
(JSC::fillStructuresUsingDateArgs):



Canonical link: https://commits.webkit.org/193922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222638 268f45cc-cd09-0410-ab3c-d52691b4dbfc